# API-produtosKosherFortaleza

./: README.md  kosherProducts.csv  main.py  pyproject.toml
